force wider width

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,6 +8,10 @@ body {
    background-color: #f8f9ff;
 }
 
+.force-width {
+   max-width: 95rem !important;
+}
+
 .domKeywords {
    /* min-height: 70vh; */
    border-color: #e9ebff;
@@ -213,13 +217,13 @@ body {
    width: 100%;
 }
 
-.domain_selector .selected > span:nth-child(1),
-.insight_selector .selected > span:nth-child(1) {
+.domain_selector .selected>span:nth-child(1),
+.insight_selector .selected>span:nth-child(1) {
    width: 100%;
 }
 
-.dom_sc_stats > div::after,
-.dom_stats > div::after {
+.dom_sc_stats>div::after,
+.dom_stats>div::after {
    content: "";
    width: 1px;
    height: 35px;
@@ -228,15 +232,16 @@ body {
    right: 0;
 }
 
-.dom_sc_stats > div:nth-child(3)::after {
+.dom_sc_stats>div:nth-child(3)::after {
    display: none;
 }
 
-.dom_stats > div:nth-child(2)::after {
+.dom_stats>div:nth-child(2)::after {
    display: none;
 }
 
 @media (min-width: 1024px) {
+
    /* Domain Header Button Tooltips */
    .domheader_action_button:hover i {
       visibility: visible;
